--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="./logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Bran's game land where you explore games" />
+  <meta name="description" 
+  content="Bran's game land where you explore details about your games" />
   <title>Bran's GameLand</title>
 </head>
 
